// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Notifications Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu nKarx sc-hGPBjI hhYUbN"
    >
      <div
        class="react-notification-root sc-hZpJaK ggFHRD"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
                >
                  
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                  >
                    This is a notification
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
                >
                  
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                  >
                    <div
                      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO"
                    >
                      <div
                        class="sc-fKVqWL hOcWtv sc-bBHxTw ejOmck"
                      >
                        Some text for the user to read
                      </div>
                      <button
                        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT cGuTUx"
                        type="button"
                      >
                        This is a button
                      </button>
                    </div>
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        Add text notification
      </button>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        Add button notification
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Positioning 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="react-notification-root sc-hZpJaK ggFHRD"
    >
      <div
        class="notification-container-top-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  top-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  top-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  bottom-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  bottom-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  top-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-center"
      >
        <div
          class="center-inner"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 10ms height;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
                >
                  
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                  >
                    center
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-dlVxhl dljPk kNGFbM sc-llYSUQ FJxnU sc-dSfdvi guToaT"
            >
              
              <div
                class="sc-gKclnd iQIogj sc-iCfMLu jciJBO"
              >
                
                <span
                  class="sc-fKVqWL hOcWtv sc-iwjdpV gmQuoR"
                >
                  bottom-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 dxCrOx sc-bqiRlB sc-bkkeKt edofBN hOrbaG sc-dJjYzT cGuTUx sc-kfPuZi iGpogn"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu IXmar sc-hGPBjI jrnTxU"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk"
      >
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          top-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          top-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          top-right
        </button>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        center
      </button>
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk"
      >
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          bottom-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          bottom-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
          type="button"
        >
          bottom-right
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Types 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu nKarx sc-hGPBjI hhYUbN"
    >
      <div
        class="react-notification-root sc-hZpJaK ggFHRD"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu huiLtj sc-hGPBjI sc-dlVxhl dljPk nMzZG sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                <div
                  class="sc-fKVqWL hOcWtv sc-bBHxTw eYXqkg"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-lightbulb "
                    data-icon="lightbulb"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M112.1 454.3c0 6.297 1.816 12.44 5.284 17.69l17.14 25.69c5.25 7.875 17.17 14.28 26.64 14.28h61.67c9.438 0 21.36-6.401 26.61-14.28l17.08-25.68c2.938-4.438 5.348-12.37 5.348-17.7L272 415.1h-160L112.1 454.3zM191.4 .0132C89.44 .3257 16 82.97 16 175.1c0 44.38 16.44 84.84 43.56 115.8c16.53 18.84 42.34 58.23 52.22 91.45c.0313 .25 .0938 .5166 .125 .7823h160.2c.0313-.2656 .0938-.5166 .125-.7823c9.875-33.22 35.69-72.61 52.22-91.45C351.6 260.8 368 220.4 368 175.1C368 78.61 288.9-.2837 191.4 .0132zM192 96.01c-44.13 0-80 35.89-80 79.1C112 184.8 104.8 192 96 192S80 184.8 80 176c0-61.76 50.25-111.1 112-111.1c8.844 0 16 7.159 16 16S200.8 96.01 192 96.01z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu lfVmRC"
                >
                  <span
                    class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
                  >
                    Note!
                  </span>
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV GMWeg"
                  >
                    info
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT eeGgB sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu eKXQBJ sc-hGPBjI sc-dlVxhl dljPk hYjsLV sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                <div
                  class="sc-fKVqWL hOcWtv sc-bBHxTw ckwMS"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-triangle-exclamation "
                    data-icon="triangle-exclamation"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M506.3 417l-213.3-364c-16.33-28-57.54-28-73.98 0l-213.2 364C-10.59 444.9 9.849 480 42.74 480h426.6C502.1 480 522.6 445 506.3 417zM232 168c0-13.25 10.75-24 24-24S280 154.8 280 168v128c0 13.25-10.75 24-23.1 24S232 309.3 232 296V168zM256 416c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 401.9 273.4 416 256 416z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu lppAwi"
                >
                  <span
                    class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
                  >
                    Warning!
                  </span>
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV EQrog"
                  >
                    warning
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cXJFXh sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu bURqap sc-hGPBjI sc-dlVxhl dljPk cynbHW sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                <div
                  class="sc-fKVqWL hOcWtv sc-bBHxTw bkFZrq"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check "
                    data-icon="circle-check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu CqgIU"
                >
                  <span
                    class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
                  >
                    Success!
                  </span>
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV gwTeFS"
                  >
                    success
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cCtRJX sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKclnd exdBHI sc-iCfMLu bqJAXg sc-hGPBjI sc-dlVxhl dljPk fImdLd sc-llYSUQ FJxnU sc-dSfdvi guToaT"
              >
                <div
                  class="sc-gKclnd iQIogj sc-iCfMLu bvZgoS"
                >
                  <span
                    class="sc-fKVqWL Gjjzu sc-iwjdpV fivJgS"
                  >
                    <span
                      class="sc-fKVqWL hOcWtv sc-iwjdpV ZRnYE"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-ban "
                        data-icon="ban"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM99.5 144.8C77.15 176.1 64 214.5 64 256C64 362 149.1 448 256 448C297.5 448 335.9 434.9 367.2 412.5L99.5 144.8zM448 256C448 149.1 362 64 256 64C214.5 64 176.1 77.15 144.8 99.5L412.5 367.2C434.9 335.9 448 297.5 448 256V256z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="sc-fKVqWL hOcWtv sc-iwjdpV iXrUAY"
                    >
                      Error!
                    </span>
                  </span>
                  <span
                    class="sc-fKVqWL hOcWtv sc-iwjdpV mljjg"
                  >
                    danger
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT dFxQZZ sc-kfPuZi iGpogn"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        danger
      </button>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        success
      </button>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        warning
      </button>
      <button
        class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN fjmVsx sc-dJjYzT iNFlLy"
        type="button"
      >
        info
      </button>
    </div>
  </div>
</div>
`;
